# hello-dbt

./: README.md  docker-compose.yml
dataengineercafe/: .gitignore  README.md  dbt_project.yml  profiles.yml  requirements.txt
dataengineercafe/macros/: dollars_to_bahts.sql
dataengineercafe/models/: dim_customers.sql  dim_orders.sql  fct_payments.sql  src_jaffle_shop.yml
dataengineercafe/snapshots/: jaffle_shop_customer.sql
dataengineercafe/tests/: assert_amount_should_not_have_negative_value.sql
demo/: README.md  docker-compose.yml  pyproject.toml
demo/my_project/: dbt_project.yml  profiles.yml
demo/my_project/models/marts/: fct_orders.sql
demo/my_project/models/statging/: src.yml  stg__customers.sql  stg__orders.sql  stg__payments.sql
demo/setup/scripts/: init.sql
racar/: dbt_project.yml
racar/models/: top_5_expensive_cars.sql
racar/models/marts/used_cars/: mitsu.sql
racar/models/staging/vehicle/: stg_avg_car_price_by_brand.sql  stg_avg_car_price_by_brand.yml
racar/tests/: assert_ferrari_should_be_included.sql
simple_dbt/: README.md  dbt_project.yml  pyproject.toml
simple_dbt/models/: another_customer_orders.sql  customer_orders.sql  customers.sql  final.sql  orders.sql  schema.yml
simple_dbt/tests/: assert_michael_should_not_be_included.sql
with-spark/: .gitignore  README.md  pyproject.toml
with-spark/demo/: .user.yml  dbt_project.yml  profiles.yml
with-spark/demo/models/: my_percent.sql  my_sum.sql
